feat: add some features

--- a/src/main/resources/keys/messages.properties
+++ b/src/main/resources/keys/messages.properties
@@ -1,13 +1,12 @@
-DATABASE_ERROR_INSERT   = Error al insertar registro: 
-DATABASE_ERROR_UPDATE   = Error al actualizar registro: 
-DATABASE_ERROR_GETALL   = Error al obtener registros: 
-DATABASE_ERROR_DELETE   = Error al eliminar registro: 
-DATABASE_ERROR_GETBYID  = Error al buscar registro: 
-DATABASE_ERROR_VERIFY   = Error al iniciar sesi\u00f3n
+DATABASE.ERROR.INSERT=Error al insertar registro: 
+DATABASE.ERROR.UPDATE=Error al actualizar registro: 
+DATABASE.ERROR.GETALL=Error al obtener registros: 
+DATABASE.ERROR.DELETE=Error al eliminar registro: 
+DATABASE.ERROR.GETBYID=Error al buscar registro: 
+DATABASE.ERROR.VERIFY=Error al iniciar sesi\u00f3n
 
-DATABASE_SUCCESS_INSERT     = Registro insertado correctamente
-DATABASE_SUCCESS_UPDATE     = Registro actualizado correctamente
-DATABASE_SUCCESS_GETALL     = Registros obtenidos correctamente
-DATABASE_SUCCESS_DELETE     = Registro eliminado correctamente
-DATABASE_SUCCESS_GETBYID    = Registro encontrado correctamente
-
+DATABASE.SUCCESS.INSERT=Registro insertado correctamente
+DATABASE.SUCCESS.UPDATE=Registro actualizado correctamente
+DATABASE.SUCCESS.GETALL=Registros obtenidos correctamente
+DATABASE.SUCCESS.DELETE=Registro eliminado correctamente
+DATABASE.SUCCESS.GETBYID=Registro encontrado correctamente
